# WTR_QLT

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  DATABRICKS_COST_OPTIMIZATION.md  Dockerfile  NOTES_PERSO.md  PROJECT_STATUS.md  README.md  check_final.py  check_final2.py  check_final3.py  check_screenshot.py  check_screenshot2.py  check_screenshot3.py  docker-compose.yml  dummy_st.py  get_st_dom.py  get_st_dom2.py  get_st_dom3.py  get_st_dom4.py  get_st_dom5.py  get_st_dom6.py  main.py  package-lock.json  pyproject.toml  tasks.py  test-silver.ipynb  test.ipynb  test_st_dark.py  test_st_dark2.py  test_st_dark3.py
.cloud/: main.tf  outputs.tf  terraform.tfvars  variables.tf
.github/workflows/: deploy.yml  release.yml
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_config/ides/: claude-code.yaml  gemini.yaml
_bmad/_memory/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
app/: Dockerfile  ingest.py  main.css  main.py  pyproject.toml  st_main.py
app/.streamlit/: config.toml
app/data/: .gitignore
docs/: 01_contexte.md  02_donnees.md  03_infrastructure.md  04_taches.md  05_ressources.md  06_kpi_gold.md  README.md
notebooks/: 01_DLT_Bronze_Ingestion.py  01_DLT_IngestionV2.py  01_DLT_Ingestion_Qualite_Eau.py  02_Silver_Transformation.py  03_Gold_Agregations.py  04_Quality_Checks.py
scripts/: api_qualite_eau.py  create_workflow.py  test_azure_conn.py  test_hubeau_v2.py
