[project]
name = "wtr-qlt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-storage-blob>=12.27.0",
    "invoke>=2.2.1",
    "loguru>=0.7.3",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "rich>=14.2.0",
]





[tool.setuptools]
packages = []

[tool.uv]
package = true

[dependency-groups]
dev = [
    "icecream>=2.1.8",
    "rich>=14.2.0",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
upload_to_vcs_release = true
build_command = "pip install build && python -m build"
major_on_zero = false
commit_message = "chore(release): {version}"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "docs", "style", "refactor", "perf", "test", "build", "ci", "chore"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
