[project]
name = "wtr-qlt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "databricks-cli>=0.18.0",
    "dlt>=1.18.1",
    "invoke>=2.2.1",
    "loguru>=0.7.3",
    "pyspark>=4.0.1",
    "rich>=14.2.0",
]

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
exclude = ["logs*", "notebooks*", "docs*", "_older*", "_ressources*", "tests*"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "delta-spark>=4.0.0",
    "icecream>=2.1.8",
    "rich>=14.2.0",
]
